Atualizando parte do README.